--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^2.0.16"
-    },
-    "dependencies": {
-        "ws": "^8.8.0"
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
+        "eslint": "^9.13.0",
+        "nodemon": "^2.0.22",
+        "prettier": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "tsx": "^4.19.1",
+        "typescript": "^5.6.3",
+        "ws": "^8.18.0"
     }
 }
