--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
+        "@types/ws": "^8.5.12",
+        "@typescript-eslint/eslint-plugin": "^8.11.0",
+        "@typescript-eslint/parser": "^8.11.0",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "eslint": "^9.13.0",
@@ -22,6 +25,8 @@
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.19.1",
         "typescript": "^5.6.3",
+        "webpack": "^5.95.0",
+        "webpack-cli": "^5.1.4",
         "ws": "^8.18.0"
     }
 }
