--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-    "name": "ws_task",
-    "version": "1.0.0",
-    "description": "Template for the WebSocket remote control task",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "start": "node ./index.js",
-        "start:dev": "nodemon ./index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Gulia Isaeva",
-    "keywords": [],
-    "license": "ISC",
-    "devDependencies": {
-        "@types/ws": "^8.5.12",
-        "@typescript-eslint/eslint-plugin": "^8.11.0",
-        "@typescript-eslint/parser": "^8.11.0",
-        "cross-env": "^7.0.3",
-        "dotenv": "^16.4.5",
-        "eslint": "^9.13.0",
-        "nodemon": "^2.0.22",
-        "prettier": "^3.3.3",
-        "ts-node": "^10.9.2",
-        "ts-node-dev": "^2.0.0",
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.3",
-        "webpack": "^5.95.0",
-        "webpack-cli": "^5.1.4",
-        "ws": "^8.18.0"
-    }
+  "name": "ws_task",
+  "version": "1.0.0",
+  "description": "Template for the WebSocket remote control task",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "tsx  index.js",
+    "start:dev": "nodemon --exec tsx index.js",
+    "build": "tsc",
+    "test": "jest"
+  },
+  "author": "Gulia Isaeva",
+  "keywords": [],
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^22.8.1",
+    "@types/ws": "^8.5.12",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.13.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "ws": "^8.18.0"
+  }
 }
